<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="API_KEY">AIzaSyBt1GJSx2wxdTaaqAt_fIUzAjHEKgkHn9A</string>
    <string name="app_id">351256478375766</string>
    <string name="action_map">Map</string>
    <string name="app_name">E-sloop</string>
    <string name="welcome">Ahoy, matey!</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="action_log_out">Log out</string>
    <string name="action_location_found">Found location</string>
    <string name="activity_new_message">Enter new message</string>
    <string name="cancel_changes_button">Cancel</string>
    <string name="captains_tab">This is Fragment 1</string>
    <string name="comments">Comments:</string>
    <string name="deck_hand">Deck Hand</string>
    <string name="experience">Experience:</string>
    <string name="first_mate">First Mate</string>
    <string name="second_mate">Second Mate</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_comments">Enter comment(s)</string>
    <string name="hint_name">Enter name</string>
    <string name="hint_position">Enter position</string>
    <string name="hint_location">Enter location</string>
    <string name="location">Location:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="photo_prompt">Upload photo:</string>
    <string name="position">Position:</string>
    <string name="profile_display_header">Your Profile</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_update_header">Update Profile</string>
    <string name="name_update">Name</string>
    <string name="title_activity_profile_update">ProfileUpdate</string>
    <string name="location_update">Location</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="experience_years_update">Years of experience:</string>
    <string name="experience_crew_positions">Crew positions held:</string>
    <string name="user_name">Name:</string>
    <string name="update_profile_button">Update profile</string>

    <string-array name="experience_years_array">
        <item>0</item>
        <item>1</item>
        <item>4</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string-array name="boat_type_array">
        <item>N/A</item>
        <item>Catamaran</item>
        <item>Catboat</item>
        <item>Ketch</item>
        <item>Schooner</item>
        <item>Sloop</item>
        <item>Sunfish</item>
        <item>Yawl</item>
    </string-array>
    <string-array name="drawer_array">
        <item>Search positions available</item>
        <item>Search positions wanted</item>
        <item>Post position available</item>
        <item>Post position wanted</item>
        <item>Profile</item>
        <item>Log in</item>
        <item>Log out</item>
    </string-array>

    <string name="title_activity_profile_display">ProfileDisplay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login__activity__homemade">Login_Activity_Homemade</string>
    <string name="experience_prompt">Experience:</string>
    <string name="comments_prompt">Comments:</string>
    <string name="title_activity_parse_login">ParseLoginActivity</string>
    <string name="title_activity_search_filter">SearchFilter</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_post_wanted">PostWanted</string>
    <string name="position_available_posting">What position(s) are available?</string>
    <string name="where_boat_sailing_q">Where is the boat sailing?</string>
    <string name="where_sailing_q">Where is the boat sailing?</string>
    <string name="when_sailing_q">When is the boat sailing?</string>
    <string name="typeSailingQ">What type of sailing is this position for?</string>
    <string name="commercial">Commercial</string>
    <string name="racing">Racing</string>
    <string name="recreational">Recreational</string>
    <string name="fromPrompt">From:</string>
    <string name="toPrompt">To:</string>
    <string name="post_position">Post Position</string>
    <string name="cancel_post_button">Cancel Post</string>
    <string name="action_post_available">Post position available</string>
    <string name="title_activity_post_available">Post available activity</string>
    <string name="title_activity_crew_wanted_search">CrewWantedSearch</string>
    <string name="position_wanted_search">Search positions wanted</string>
    <string name="title_activity_post_position_available">PostPositionAvailable</string>
    <string name="boat_type_q">Type of boat?</string>
    <string name="title_activity_post_position_wanted">PostPositionWanted</string>
    <string name="position_wanted_q">What position(s) are you looking for?</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination:</string>
    <string name="when_available_sailing_q">When are you available to sail?</string>
    <string name="sailors_experience_q">How many years of sailing experience do you have?</string>
    <string name="years_experience_had_q">How many years of  experience do you have?</string>
    <string name="action_post_wanted">Post position wanted</string>
    <string name="select_date">Select Date</string>
    <string name="dateGeneric">MM/DD/YYYY</string>
    <string name="typeSailingWantedQ">What type of sailing are you interested in?</string>
    <string name="ontentDescriptionBoatPic">Boat Image</string>
    <string name="schooner">Schooner</string>
    <string name="catamaran">Catamaran</string>
    <string name="catboat">Catboat</string>
    <string name="ketch">Ketch</string>
    <string name="sloop">Sloop</string>
    <string name="sunfish">Sunfish</string>
    <string name="yawl">Yawl</string>
    <string name="search">Search</string>
    <string name="search_position_available_posting">Search positions looking for:</string>
    <string name="search_years_experience_q">Which prefers at least this many years of experience:</string>
    <string name="search_when_sailing_q">Which is sailing between these dates:</string>
    <string name="searchTypeSailingQ">For type of sailing:</string>
    <string name="search_boat_type_q">With boats of these type(s):</string>
    <string name="cancel_search">Cancel Search</string>
    <string name="contactPrompt">Enter an email address for contact:</string>
    <string name="email_placeholder">(Contact email goes here)</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login_parse">LoginParse</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="title_activity_sign_up_or_login">SignUpOrLoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Esloop: Helping you set sail</string>
    <string name="title_activity_settings">Settings</string>
    <string name="log_out">Log out of Esloop</string>
    <string name="prompt_username">Enter username</string>
    <string name="boatingActivityPrompt">Type of boating:</string>
    <string name="boatingActivityAvailablePlaceholder">Boating Activity</string>
    <string name="title_activity_boat_view">BoatViewActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="position_available_search">Search positions available</string>
    <string name="any_check_box">Any</string>
    <string name="email_address">Email address</string>
    <string name="title_activity_search_filter_position_wanted">SearchFilterPositionWanted</string>
    <string name="years">year(s)</string>
    <string name="comments_placeholder">(Comments placeholder)</string>
    <string name="upload_photo">Upload photo</string>
    <string name="search_position_wanted_posting">Find people looking for a position as a:</string>
    <string name="search_years_experience_had_q">Who have at least the following years of experience:</string>
    <string name="any_boat">Any sailboat</string>
    <string name="search_wanted_boat_type_q">On these types of boats:</string>
    <string name="title_activity_search_results_positions_available">SearchResultsPositionsAvailable</string>
    <string name="title_activity_search_results_position_wanted">SearchResultsPositionWanted</string>
    <string name="title_activity_position_wanted_search_list_view_adapter">PositionWantedSearchListViewAdapter</string>
    <string name="title_activity_position_wanted_view">PositionWantedView</string>
    <string name="title_activity_profile_picture_view">ProfilePictureViewActivity</string>
    <string name="position_wanted">Position(s) wanted:</string>
    <string name="experience_had_prompt">Years of experience:</string>
    <string name="title_activity_search_results_position_available">Position Available Search Results</string>
    <string name="drawer_list_item_text">Drawer list item text</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="additional_info">Additional info:</string>
    <string name="add_info_placeholder">Additional information placeholder</string>
    <string name="crew_experience_prompt">Crew experience:</string>
    <string name="captainExperiencePrompt">Captain experience:</string>
    <string name="na">N/A</string>

</resources>
