<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lelander.mbaize.e_sloop.ProfileDisplay" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"/>

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_location_found"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="ifRoom"/>

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_help"
        android:showAsAction="never"/>
    <!-- Logout -->
    <item android:id="@+id/action_log_out"
        android:icon="@drawable/ic_action_help"
        android:title="@string/action_log_out"
        android:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
